update index file
updating index

--- a/Automation Project copy/index.html
+++ b/Automation Project copy/index.html
@@ -5,7 +5,7 @@
 
 	<h1> Welcome to my awesome Docker project </h1>
 
-	 <h2> Testing our auto build </h2>
+	 <h2> Testing our auto build using both Github and Docker</h2>
 
 	 <p> DOCKER! </p>
 	
